add more assets

--- a/src/app/digital-fabrication/digital-fabrication.component.html
+++ b/src/app/digital-fabrication/digital-fabrication.component.html
@@ -1182,6 +1182,17 @@
           Also, many thanks to everyone who prayed for my 3d prints to resolve error free.
         </p>
 
+        <div class="assignment-h2">Timeless Clock Face</div>
+
+        <p><a href="../assets/images/digital-fabrication/a8/Ticks.3dm">
+          Rhino Download
+        </a></p>
+
+        <p><a href="../assets/images/digital-fabrication/a8/Ticks.dxf">
+          DXF Download
+        </a></p>
+
+
 
 
       </div>
