basic content updates

--- a/src/app/article-footer/article-footer.component.html
+++ b/src/app/article-footer/article-footer.component.html
@@ -17,7 +17,7 @@
 
   <section class="page-bottom">
     <span class="copyright-text">
-      &copy; 2018, Peter Cutler
+      &copy; 2018-{{currentYear}}, Peter Cutler
     </span>
 
     <div class="contact-links">
