--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -9,16 +9,13 @@
     <div class="primary-content about-item">
       <div class="bio">
         <p>
-          Hey, I'm Peter Cutler, and I'm a UX designer and developer living in Seattle. I'm also a Master's student studying <a target="_blank" class="basic-link" href="https://www.hcde.washington.edu/ms/">
+          Hey, I'm Peter Cutler, and I'm a UX designer and developer living in Seattle. In 2019, I completed my M.S. in <a target="_blank" class="basic-link" href="https://www.hcde.washington.edu/ms/">
           Human Centered Design & Engineering</a> at the University of
           Washington.
         </p>
         <p>
           I've worked in different tech roles for the past seven years, doing
-          things like strategy, UX, design, and software engineering
-          with some great people. <a class="basic-link" routerLink="/work">
-          You can find some of my work here</a>. Take a look and feel free to
-          reach out.
+          things like UX, product management, and software engineering with some great people. <a class="basic-link" routerLink="/work"> You can find some of my work here</a>. Take a look and feel free to reach out.
         </p>
       </div>
     </div>
