update dependencies pre-build

--- a/src/scss/_article-footer.scss
+++ b/src/scss/_article-footer.scss
@@ -40,7 +40,7 @@
 
     &::before {
       color: $mini-heading-gray;
-      @include transition (all, 0.2s, ease-in-out)
+      @include transition (all, 0.2s, ease-in-out);
     }
 
     &:hover::before {
