add eras, cleanup routes, remove glightbox

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -9,13 +9,16 @@
     <div class="primary-content about-item">
       <div class="bio">
         <p>
-          Hey, I'm Peter Cutler, and I'm a UX designer and developer living in Seattle. In 2019, I completed my M.S. in <a target="_blank" class="basic-link" href="https://www.hcde.washington.edu/ms/">
-          Human Centered Design & Engineering</a> at the University of
-          Washington.
+          Hi, I'm Peter Cutler
         </p>
         <p>
-          I've worked in different tech roles for the past seven years, doing
-          things like UX, product management, and software engineering with some great people. <a class="basic-link" routerLink="/work"> You can find some of my work here</a>. Take a look and feel free to reach out.
+          I'm a product manager based in Seattle, Washington. I use human-centered methods to build great teams and products. In every step of my work, my methodology is rooted in gathering, organizing, and using reliable data to make product decisions and measure their outcomes for continuous improvement.
+        </p>
+        <p>
+          I've worked in different tech roles for over 10 years, with deep experience in software engineering, UX, user research, strategy, and product management. I've spent time with a range of startups, and taken two to acquisition. I have an M.S. in human-computer interaction from the University of Washington. <a class="basic-link" routerLink="/work"> You can find some of my work here</a>.
+        </p>
+        <p>
+          When I'm not working, I like to play tennis, read, <a class="basic-link" target="_blank" href="https://letterboxd.com/bwv"> watch movies</a>, play piano, and ride my bike around Seattle.
         </p>
       </div>
     </div>
