--- a/src/app/article-footer/article-footer.component.html
+++ b/src/app/article-footer/article-footer.component.html
@@ -21,7 +21,7 @@
     </span>
 
     <div class="contact-links">
-      <a target="_blank" href="https://twitter.com/petergcutler" class="fab fa-twitter"></a>
+      <!-- <a target="_blank" href="https://twitter.com/petergcutler" class="fab fa-twitter"></a> -->
       <a target="_blank" href="mailto:petergcutler@gmail.com" class="fas fa-envelope"></a>
       <a target="_blank" href="https://linkedin.com/in/petergcutler/" class="fab fa-linkedin"></a>
     </div>
