--- a/src/app/work/work-items/crowdskout-datetime/crowdskout-datetime.component.html
+++ b/src/app/work/work-items/crowdskout-datetime/crowdskout-datetime.component.html
@@ -14,7 +14,7 @@
       Using the <a class="basic-link" target="_blank" href="https://momentjs.com/">Moment.js</a> library as a backbone for transforming and handling our date & datetime data, I built a custom component for accepting input data, transforming, and saving data in ISO8601 format. The component was built to be a flexible AngularJS directive that could easily shift implementations between date alone, or datetime, depending on varying needs.
     </p>
     <div class="work-body-image-grid">
-      <app-image-viewer
+<!--       <app-image-viewer
         path="../assets/images/work/crowdskout-datetime/datetime-1a.png"
         description="The implementation for date alone"
         borderOn="true">
@@ -23,7 +23,7 @@
         path="../assets/images/work/crowdskout-datetime/datetime-2a.png"
         description="The implementation for datetime inputs"
         borderOn="true">
-      </app-image-viewer>
+      </app-image-viewer> -->
     </div>
     <p>
       Crowdskout's date & time component is a complex, interactive module within the application. If you have any questions, I'm happy to walk through the design and code involved. Thanks for reading.
