--- a/src/app/work/work-items/crowdskout-form-editor/crowdskout-form-editor.component.html
+++ b/src/app/work/work-items/crowdskout-form-editor/crowdskout-form-editor.component.html
@@ -14,7 +14,7 @@
       A Crowdskout user may use forms to ask any number of questions. These questions in turn can fuel the creating or updating of any of the hundreds of Crowdskout profile fields that exist in their database.
     </p>
     <div class="work-body-image-grid">
-      <app-image-viewer
+<!--       <app-image-viewer
         path="../assets/images/work/crowdskout-form-editor/form-editor-1a.png"
         description="A look at the field selection and questions on a Crowdskout form"
         borderOn="true">
@@ -23,7 +23,7 @@
         path="../assets/images/work/crowdskout-form-editor/form-editor-2a.png"
         description="Additional Crowdskout form fields"
         borderOn="true">
-      </app-image-viewer>
+      </app-image-viewer> -->
     </div>
     <p>
       Crowdskout's form editor component is a complex, interactive module within the application. If you have any questions, I'm happy to walk through the design and code involved. Thanks for reading.
