--- a/src/app/work/work-items/uw-complex-systems/uw-complex-systems.component.html
+++ b/src/app/work/work-items/uw-complex-systems/uw-complex-systems.component.html
@@ -109,10 +109,10 @@
     <p>
       VCA facilitators were experienced applying these practices on pen & paper, in small groups. This methodology ensured the egalitarian nature of the process: everyone in the room could voice their concerns and be heard. But it was inherently limiting to the number of participants. This became our challenge:
     </p>
-    <app-image-viewer
+<!--     <app-image-viewer
       path="../assets/images/work/uw-complex-systems/problem-solving.png"
       description="VCAs have traditionally relied on analog, participatory methods">
-    </app-image-viewer>
+    </app-image-viewer> -->
     <p>
       How can we use technology to enhance the human-centered processes of the VCA without hindering the participatory, equitable nature of the model?
     </p>
