--- a/src/app/work/work-items/uw-oculus-onboarding/uw-oculus-onboarding.component.html
+++ b/src/app/work/work-items/uw-oculus-onboarding/uw-oculus-onboarding.component.html
@@ -27,14 +27,14 @@
       We wanted to test an interface-driven product, rather than a game. I had purchased the Rift back when it launched and used it for 3d design &mdash; as a team, we explored Tilt Brush together and decided it was a great candidate.
     </p>
     <div class="work-body-image-grid">
-      <app-image-viewer
+<!--       <app-image-viewer
         path="../assets/images/work/uw-oculus-onboarding/first-contact.jpg"
         description="Oculus First Contact">
       </app-image-viewer>
       <app-image-viewer
         path="../assets/images/work/uw-oculus-onboarding/tilt-brush.jpg"
         description="Tilt Brush by Google">
-      </app-image-viewer>
+      </app-image-viewer> -->
     </div>
   </section>
 
@@ -127,14 +127,14 @@
       We brought 8 individuals to Facebook's offices for our study. Each of us moderated two, one-hour sessions with participants.
     </p>
     <div class="work-body-image-grid">
-      <app-image-viewer
+<!--       <app-image-viewer
         path="../assets/images/work/uw-oculus-onboarding/moderation-3a.png"
         description="Helping participants into VR">
       </app-image-viewer>
       <app-image-viewer
         path="../assets/images/work/uw-oculus-onboarding/moderation-2a.png"
         description="Moderating with Tilt Brush">
-      </app-image-viewer>
+      </app-image-viewer> -->
     </div>
     <p>
       We each navigated many of the unique hurdles to testing in VR:
@@ -162,10 +162,10 @@
     <p>
       We began to analyze our findings after testing our first participant. Typically, we would each note our own findings, and then begin to compare after reflecting independently. By the time we completed our eighth and final test, we had a growing body of findings, and were approaching consensus among the most severe issues.
     </p>
-    <app-image-viewer
+<!--     <app-image-viewer
       path="../assets/images/work/uw-oculus-onboarding/team-oasis-at-work.png"
       description="Our team, in a not-at-all-staged photograph">
-    </app-image-viewer>
+    </app-image-viewer> -->
     <p>
       We met a number of times following the study to prioritize our findings, put together affinity diagrams, and draft out our presentation and report.
     </p>
