--- a/src/app/work/work-items/uw-yarn/uw-yarn.component.html
+++ b/src/app/work/work-items/uw-yarn/uw-yarn.component.html
@@ -19,10 +19,10 @@
     <p>
       At the outset of our project, the design of the Yarn application was complete, but we had to organize and run its usability study. I joined a team with three other students to help run the study and analyze our findings.
     </p>
-    <app-image-viewer
+<!--     <app-image-viewer
       path="../assets/images/work/uw-yarn/recruitment-photo.png"
       description="Sharing DIY and running progress on Yarn">
-    </app-image-viewer>
+    </app-image-viewer> -->
     <p>
       We first spent some time familiarizing ourselves with the application. To contrast Yarn with an app like Runkeeper, Yarn focuses on building an extended narrative from many chapters, rather than on "individual" runs. Each run (e.g. 'Wednesday 5k') is added to an overall story (e.g. 'Training for the Boston Marathon'). The same would be true of a DIY project like building a chair.
     </p>
