--- a/src/app/work/work-items/vox-global-brand-redesign/vox-global-brand-redesign.component.html
+++ b/src/app/work/work-items/vox-global-brand-redesign/vox-global-brand-redesign.component.html
@@ -14,7 +14,7 @@
       From the start of 2012 to the end of 2015, I worked closely with VOX Global's creative director to manage to the brand of the agency. After many years, we knew it was time for a redesign. We spent what time we had away from clients researching and redesigning our identity.
     </p>
     <div class="work-body-image-grid">
-      <app-image-viewer
+<!--       <app-image-viewer
         path="../assets/images/work/vox-global-brand-redesign/original-1.png"
         description="VOX Global Homepage - Before"
         [borderOn]="true">
@@ -23,7 +23,7 @@
         path="../assets/images/work/vox-global-brand-redesign/new-1.png"
         description="VOX Global Homepage - After"
         [borderOn]="true">
-      </app-image-viewer>
+      </app-image-viewer> -->
     </div>
   </section>
 
