--- a/src/app/work/work-items/crowdskout-segmenting/crowdskout-segmenting.component.html
+++ b/src/app/work/work-items/crowdskout-segmenting/crowdskout-segmenting.component.html
@@ -13,12 +13,12 @@
     <p>
       Audience segments in Crowdskout are made up of deanonymized "profiles." A mock profile is shown below. Each profile is made up of hundreds of criteria, including demographic information as well as many other types of info.
     </p>
-    <app-image-viewer
+<!--     <app-image-viewer
       [images]="csProfileImages"
       path="../assets/images/work/crowdskout-segmenting/segmenting-0a.png"
       description="A gallery of Crowdskout's Profile Updates"
       textColor="salmon">
-    </app-image-viewer>
+    </app-image-viewer> -->
     <p>
       Users build segments of profiles by selecting the criteria that they want to segment on, for instance, people of a certain gender, age, and/or ethnicity. Doing so, they can find all of the profiles in their database that match these criteria.
     </p>
@@ -34,12 +34,12 @@
     <p>
       We updated the segmenting feature to improve the way users create and manage their audience segments.
     </p>
-    <app-image-viewer
+<!--     <app-image-viewer
       [images]="csSegmentingImages"
       path="../assets/images/work/crowdskout-segmenting/segmenting-1a.png"
       description="A gallery of Crowdskout's Segmenting Updates"
       textColor="salmon">
-    </app-image-viewer>
+    </app-image-viewer> -->
     <p>
       Crowdskout's segmenting component is a complex, interactive module within the application. If you have any questions, I'm happy to walk through the design and code involved. Thanks for reading.
     </p>
