--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -1,6 +1,7 @@
 // Colors
   $elder-salmon: hsla(6, 78%, 57%, 1); // #e74d3c
   $youthful-salmon: hsla(6, 78%, 66%, 1); // #ec7265
+  $riverwater: rgb(64,68,93);
 // Monochrome
 
   // Low-contrast, fails WCAG 2.0
