--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -2,11 +2,8 @@ html {
   overflow-y: scroll;
 }
 
-.about-content,
 .work-content,
-.work-entry,
-.main-nav,
-.main-footer {
+.work-entry {
   padding: 0 2em;
   max-width: $full-width;
   margin: 0 auto;
