--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -3,7 +3,7 @@
   <section class="about-main">
 
     <div class="secondary-content about-item">
-      <img class="self-image" src="../assets/images/about/self-image.jpg" alt="peter-cutler">
+      <img class="self-image" src="../assets/images/about/cutler-headshot.png" alt="peter-cutler">
     </div>
 
     <div class="primary-content about-item">
@@ -12,13 +12,13 @@
           Hi, I'm Peter Cutler
         </p>
         <p>
-          I'm a product manager based in Seattle, Washington. I use human-centered methods to build great teams and products. In every step of my work, my methodology is rooted in gathering, organizing, and using reliable data to make product decisions and measure their outcomes for continuous improvement.
+          I'm a product manager based in Seattle, Washington. I use a human-centered methodology to build cohesive teams and meaningful products. Throughout my work, I look for new ways to use data to inform product decisions, measure their impact, and improve.
         </p>
         <p>
           I've worked in different tech roles for over 10 years, with deep experience in software engineering, UX, user research, strategy, and product management. I've spent time with a range of startups, and taken two to acquisition. I have an M.S. in human-computer interaction from the University of Washington. <a class="basic-link" routerLink="/work"> You can find some of my work here</a>.
         </p>
         <p>
-          When I'm not working, I like to play tennis, read, <a class="basic-link" target="_blank" href="https://letterboxd.com/bwv"> watch movies</a>, play piano, and ride my bike around Seattle.
+          When I'm not working, I like to play tennis, read, <a class="basic-link" target="_blank" href="https://letterboxd.com/bwv"> watch movies</a>, play piano, and ride my bike.
         </p>
       </div>
     </div>
