--- a/src/scss/_article-footer.scss
+++ b/src/scss/_article-footer.scss
@@ -1,3 +1,10 @@
+.main-footer {
+  padding: 0 2em;
+  max-width: 90%;
+  margin: 0 auto;
+}
+
+
 .image-attribution {
   font-size: .9em;
   color: $support-gray;
