--- a/src/scss/_work-list.scss
+++ b/src/scss/_work-list.scss
@@ -1,3 +1,133 @@
+.era-content-new {
+  width: 90%;
+  margin: 0 auto;
+  padding: 0 2em;
+}
+
+.era-main-new {
+  margin-top: 2em;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-row-gap: 3.2em;
+  align-items:center;
+  justify-content:center;
+
+  @include respond-to('large') {
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 2em;
+    align-items:center;
+    justify-content:center;
+  }
+}
+
+.era-item-image-new {
+  max-width: 100%;
+}
+
+
+.era-item-title-new {
+  color: $nightrider;
+  font-size: $prettybig;
+  font-family: $fancy-heading-font;
+  font-weight: bold;
+  padding-top: .6em;
+}
+
+.era-item-subtitle-new {
+  color: $riverwater;
+  font-family: $mini-heading-font;
+  padding-top: .48em;
+}
+
+
+.era-content {
+  max-width: 40em;
+  margin: 0 auto;
+  padding-bottom: 6em;
+}
+
+.era-main {
+  display: grid;
+  padding-top: 3em;
+  grid-row-gap: 8em;
+
+  @include respond-to('large') {
+    grid-template-columns: auto auto;
+    justify-content: space-between;
+    grid-column-gap: 2em;
+    grid-row-gap: 8em;
+  }
+}
+
+.era-item {
+  position: relative;
+  max-width: 30em;
+  max-height: 20em;
+  color: $white;
+  background-size: cover;
+  border-bottom: 0;
+  transition: border-bottom .3s ease-out;
+  cursor: pointer;
+
+  &:before {
+    content: '';
+    position: absolute;
+    max-height: 20em;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(
+      135deg,
+      #000000 0%,
+      #494949 100%
+    );
+    opacity: 0;
+    -webkit-transition: opacity 0.3s ease-out;
+    transition: opacity 0.3s ease-out;
+  }
+
+  &:hover:before{
+    opacity: 0.6;
+  }
+
+  // IMPORTANT! Class name AND path name are sensitive
+  &.tempthumb {
+    background-image: url('/assets/images/work/thumbnails/tempthumb.png');
+  }
+
+  &.crowdskout {
+    background-image: url('/assets/images/work/thumbnails/crowdskout.png');
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+  }
+}
+
+.era-item-image {
+  max-width: 100%;
+  max-height: 20em;
+  visibility: hidden; // hide cover img, but retain sizing
+}
+
+.era-item-title {
+  color: rgb(64,68,93);
+  font-size: $huge;
+  font-family: $fancy-heading-font;
+  font-weight: bold;
+  position: absolute;
+  line-height: 1.6em;
+  padding-top: 1rem;
+}
+
+.era-item-subtitle {
+  color: rgb(64,68,93);
+  font-family: $mini-heading-font;
+  position: absolute;
+  line-height: 1.6em;
+  padding-top: 4.2rem;
+}
+
 .work-content {
   max-width: 30em;
   margin: 0 auto;
@@ -65,6 +195,14 @@
   }
 
   // IMPORTANT! Class name AND path name are sensitive
+  &.tempthumb {
+    background-image: url('/assets/images/work/thumbnails/tempthumb.png');
+  }
+
+  &.crowdskout {
+    background-image: url('/assets/images/work/thumbnails/crowdskout.png');
+  }
+
   &.uw-secure-storage {
     background-image: url('/assets/images/work/thumbnails/uw-secure-storage.png');
   }
