--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -4,6 +4,8 @@
 @import url('https://fonts.googleapis.com/css?family=Rubik');
 @import url('https://fonts.googleapis.com/css?family=Nunito');
 @import url('https://fonts.googleapis.com/css?family=Share+Tech+Mono');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@0;1&display=swap');
 
 // External libraries
 @import 'node_modules/lightgallery/scss/lightgallery';
@@ -28,9 +30,6 @@
 @import './work-body';
 
 // Pages
-@import './mosaic-display';
-@import './mosaic-create';
-@import './digital-fabrication';
 @import './dashboard';
 @import './about';
 @import './work-list';
