update era landing page

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -15,7 +15,7 @@
           I'm a product manager in Seattle, Washington. I use a human-centered approach to build great teams and products.
         </p>
         <p>
-          I've worked in different tech roles for over 10 years, with experience in software engineering, UX, user research, strategy, and product management. I've spent time with a range of startups, and brought two to acquisitions. I have an M.S. in human-computer interaction from the University of Washington. <a class="basic-link" routerLink="/work"> You can find some of my work here</a>.
+          I've worked in different tech roles for over ten years, with experience in software engineering, UX, user research, strategy, and product management. I've spent time with a range of startups, and brought two to exits. I have an M.S. in human-computer interaction from the University of Washington. <a class="basic-link" routerLink="/work"> You can find some of my work here</a>.
         </p>
         <p>
           When I'm not working, I like to play tennis, read, <a class="basic-link" target="_blank" href="https://letterboxd.com/bwv"> watch movies</a>, and ride my bike.
