--- a/src/scss/_work-list.scss
+++ b/src/scss/_work-list.scss
@@ -1,10 +1,10 @@
-.era-content-new {
+.era-content {
   width: 90%;
   margin: 0 auto;
   padding: 0 2em;
 }
 
-.era-main-new {
+.era-main {
   margin-top: 2em;
   display: grid;
   grid-template-columns: 1fr;
@@ -20,230 +20,60 @@
   }
 }
 
-.era-item-image-new {
+.era-item .era-item-title::after {
+  opacity: 0;
+  transform: translateX(0px) scale(.64);
+  transition: opacity 300ms cubic-bezier(0.6, 0.2, 0.1, 1), transform 300ms cubic-bezier(0.6, 0.2, 0.1, 1);
+}
+
+.era-item:hover {
+  cursor: pointer;
+}
+
+.era-item:hover .era-item-title::after {
+  opacity: 1;
+  transform: translateX(6px) scale(.64);
+  transition: opacity 300ms cubic-bezier(0.6, 0.2, 0.1, 1), transform 300ms cubic-bezier(0.6, 0.2, 0.1, 1);
+}
+
+.era-item:hover .era-item-image {
+  transform: scale(1.06);
+  transition: transform 300ms cubic-bezier(0.6, 0.2, 0.1, 1);
+}
+
+.era-item .era-item-image {
+  transform: scale(1);
+  transition: transform 300ms cubic-bezier(0.6, 0.2, 0.1, 1);
+}
+
+.era-item-image-wrapper {
+  overflow: hidden;
+}
+
+.era-item-image {
   max-width: 100%;
 }
 
 
-.era-item-title-new {
+.era-item-title {
   color: $nightrider;
   font-size: $prettybig;
   font-family: $fancy-heading-font;
   font-weight: bold;
   padding-top: .6em;
-}
 
-.era-item-subtitle-new {
-  color: $riverwater;
-  font-family: $mini-heading-font;
-  padding-top: .48em;
-}
-
-
-.era-content {
-  max-width: 40em;
-  margin: 0 auto;
-  padding-bottom: 6em;
-}
-
-.era-main {
-  display: grid;
-  padding-top: 3em;
-  grid-row-gap: 8em;
-
-  @include respond-to('large') {
-    grid-template-columns: auto auto;
-    justify-content: space-between;
-    grid-column-gap: 2em;
-    grid-row-gap: 8em;
+  &::after {
+    content: url('/assets/icons/ext-link-2.svg');
+/*    content: url("data:image/svg+xml,%3Csvg width='28' height='28' viewBox='0 0 28 28' fill='currentColor' stroke='currentColor' xmlns='http://www.w3.org/2000/svg'%3E%3Cg clip-path='url(%23a)'%3E%3Cpath d='M.4 26.171a1.056 1.056 0 0 0 0 1.429c.4.4 1.029.4 1.43 0L25.234 4.223v17.461c0 .572.429 1.029 1.001 1.029.543 0 1-.457 1-1.029V1.708c0-.114-.028-.2-.058-.286v-.028l-.028-.029v-.029l-.028-.028v-.029l-.028-.029v-.028h-.029v-.029h-.028v-.028l-.028-.029v-.029h-.029v-.028l-.028-.028h-.028v-.03h-.028l-.029-.028V.965h-.056V.936h-.028V.907h-.057V.879h-.056V.851h-.058l-.028-.029c-.086-.028-.172-.057-.258-.057H6.316c-.543 0-1 .457-1 1 0 .571.457 1.029 1 1.029h17.489L.4 26.171Z' fill='%23000'/%3E%3C/g%3E%3Cdefs%3E%3CclipPath id='a'%3E%3Cpath fill='%23fff' d='M0 0h28v28H0z'/%3E%3C/clipPath%3E%3C/defs%3E%3C/svg%3E");*/
+    transform: scale(.56);
+    display: inline-block;
+    position: relative;
+    top: 3px;
   }
-}
-
-.era-item {
-  position: relative;
-  max-width: 30em;
-  max-height: 20em;
-  color: $white;
-  background-size: cover;
-  border-bottom: 0;
-  transition: border-bottom .3s ease-out;
-  cursor: pointer;
-
-  &:before {
-    content: '';
-    position: absolute;
-    max-height: 20em;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(
-      135deg,
-      #000000 0%,
-      #494949 100%
-    );
-    opacity: 0;
-    -webkit-transition: opacity 0.3s ease-out;
-    transition: opacity 0.3s ease-out;
-  }
-
-  &:hover:before{
-    opacity: 0.6;
-  }
-
-  // IMPORTANT! Class name AND path name are sensitive
-  &.tempthumb {
-    background-image: url('/assets/images/work/thumbnails/tempthumb.png');
-  }
-
-  &.crowdskout {
-    background-image: url('/assets/images/work/thumbnails/crowdskout.png');
-    background-size: contain;
-    background-position: center;
-    background-repeat: no-repeat;
-  }
-}
-
-.era-item-image {
-  max-width: 100%;
-  max-height: 20em;
-  visibility: hidden; // hide cover img, but retain sizing
-}
-
-.era-item-title {
-  color: rgb(64,68,93);
-  font-size: $huge;
-  font-family: $fancy-heading-font;
-  font-weight: bold;
-  position: absolute;
-  line-height: 1.6em;
-  padding-top: 1rem;
 }
 
 .era-item-subtitle {
-  color: rgb(64,68,93);
+  color: $riverwater;
   font-family: $mini-heading-font;
-  position: absolute;
-  line-height: 1.6em;
-  padding-top: 4.2rem;
-}
-
-.work-content {
-  max-width: 30em;
-  margin: 0 auto;
-
-  @include respond-to('medium') {
-    max-width: $full-width;
-  }
-}
-
-.work-main {
-  display: grid;
-  position: relative;
-  padding-top: 3em;
-  grid-row-gap: 1em;
-
-  @include respond-to('medium') {
-    grid-template-columns: auto auto;
-    justify-content: space-between;
-    grid-column-gap: 2em;
-    grid-row-gap: 2em;
-  }
-}
-
-.work-item-title {
-  position: absolute;
-  line-height: 1.6em;
-  padding-top: 1em;
-  padding-left: 1em;
-}
-
-.work-item-image {
-  max-width: 100%;
-  visibility: hidden; // hide cover img, but retain sizing
-}
-
-.work-item {
-  position: relative;
-  max-width: 30em;
-  max-height: 20em;
-  color: $white;
-  background-size: cover;
-  border-bottom: 0;
-  transition: border-bottom .3s ease-out;
-  cursor: pointer;
-
-  &:before {
-    content: '';
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(
-      135deg,
-      #000000 0%,
-      #494949 100%
-    );
-    opacity: 0;
-    -webkit-transition: opacity 0.3s ease-out;
-    transition: opacity 0.3s ease-out;
-  }
-
-  &:hover:before{
-    opacity: 0.6;
-  }
-
-  // IMPORTANT! Class name AND path name are sensitive
-  &.tempthumb {
-    background-image: url('/assets/images/work/thumbnails/tempthumb.png');
-  }
-
-  &.crowdskout {
-    background-image: url('/assets/images/work/thumbnails/crowdskout.png');
-  }
-
-  &.uw-secure-storage {
-    background-image: url('/assets/images/work/thumbnails/uw-secure-storage.png');
-  }
-
-  &.uw-oculus-onboarding {
-    background-image: url('/assets/images/work/thumbnails/uw-oculus-onboarding.png');
-  }
-
-  &.uw-complex-systems {
-    background-image: url('/assets/images/work/thumbnails/uw-complex-systems.png');
-  }
-
-  &.uw-yarn {
-    background-image: url('/assets/images/work/thumbnails/uw-yarn.png');
-  }
-
-  &.crowdskout-data-viz {
-    background-image: url('/assets/images/work/thumbnails/crowdskout-data-viz.png');
-  }
-
-  &.crowdskout-datetime {
-    background-image: url('/assets/images/work/thumbnails/crowdskout-datetime.png');
-  }
-
-  &.crowdskout-segmenting {
-    background-image: url('/assets/images/work/thumbnails/crowdskout-segmenting.png');
-  }
-
-  &.crowdskout-form-editor {
-    background-image: url('/assets/images/work/thumbnails/crowdskout-form-editor.png');
-  }
-
-  &.vox-global-brand-redesign {
-    background-image: url('/assets/images/work/thumbnails/vox-global-brand-redesign.png');
-  }
-
-  &.vox-global-motion-design {
-    background-image: url('/assets/images/work/thumbnails/vox-global-motion-design.png');
-  }
-
-  &.vox-global-att-csr {
-    background-image: url('/assets/images/work/thumbnails/vox-global-att-csr.png');
-  }
+  padding-top: .48em;
 }
